Tests/Runtime2/Error/Props/.build/throwcustomerror.pr
[
  {
    "name": "ThrowCustomError",
    "description": "Build goal step to throw a custom error with message, key, and status code.",
    "comment": null,
    "steps": [
      {
        "index": 0,
        "text": "throw error \u0022bad thing\u0022 key=\u0022CustomKey\u0022 statusCode=422",
        "lineNumber": 2,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "error",
            "action": "throw",
            "parameters": [
              {
                "name": "Message",
                "value": "bad thing",
                "type": "string"
              },
              {
                "name": "StatusCode",
                "value": 422,
                "type": "int"
              },
              {
                "name": "Key",
                "value": "CustomKey",
                "type": "string"
              }
            ],
            "return": null,
            "defaults": null
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      }
    ],
    "subGoals": [],
    "visibility": 1,
    "path": "/ThrowCustomError.goal",
    "prPath": "/.build/throwcustomerror.pr",
    "hash": "8e10bd9f6f672d9297e03b262e092f9742b07097098c01f7ea73cd6c11e48d99",
    "builderVersion": "0.2.2",
    "isSetup": false,
    "isEvent": false,
    "isSystem": false,
    "isTest": false,
    "inputParameters": null
  }
]